cpp/test/Slice/errorDetection/InterfaceRedefinition.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

interface Intf1 { };
interface Intf1 { };
interface Intf1;

local interface Intf2 { };
local interface Intf2 { };
local interface Intf2;
